# CompactLTJ

./: CMakeLists.txt  LICENSE  Readme.md  compile.sh
Queries/: Queries-benchmark-850.txt  Queries-bgps.txt
include/: cltj.hpp  cltj_compact_trie_iv.hpp  cltj_index.hpp  cltj_table_indexing.hpp  cltj_utils.hpp  configuration.hpp  gao.hpp  ltj_algorithm.hpp  ltj_iterator.hpp  triple_pattern.hpp  utils.hpp
src/: build_index.cpp  query_index.cpp
